[gd_scene load_steps=25 format=2]

[ext_resource path="res://Sprites/Rect.png" type="Texture" id=1]
[ext_resource path="res://smallText.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/Louise/louiseframe2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/PlainText.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Text Manager.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Louise/louiseframe3.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Scene.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Louise/louiseframe4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Louise/louiseframe5.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Louise/louiseframe6.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Louise/louiseframe7.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Louise/louiseframe1.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Louise/louiseframe8.png" type="Texture" id=13]
[ext_resource path="res://Sprites/shelf.png" type="Texture" id=14]
[ext_resource path="res://Sprites/shoppingcart.png" type="Texture" id=15]
[ext_resource path="res://mediumText.tres" type="Theme" id=16]
[ext_resource path="res://Scripts/Action Text.gd" type="Script" id=17]
[ext_resource path="res://Scripts/Louise.gd" type="Script" id=18]
[ext_resource path="res://Scripts/MusicManager.gd" type="Script" id=19]
[ext_resource path="res://Sprites/bowl.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 13 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 100, 300 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 150, 200 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 100, 100 )

[node name="Scene" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 19.2, 10.8 )
texture = ExtResource( 1 )
centered = false

[node name="Text Manager" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Plain Text" type="Node2D" parent="Text Manager"]
position = Vector2( 960, 190 )
script = ExtResource( 4 )
readTime = 2
thisFadeDuration = 1.5
nextScene = "res://Scenes/Game Scenes/Act1Scene1.tscn"

[node name="Text" type="Label" parent="Text Manager/Plain Text"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -750.0
margin_top = -102.5
margin_right = 750.0
margin_bottom = 102.5
theme = ExtResource( 2 )
text = "Louise reaches out and takes the bowl from the shelf."
valign = 1
autowrap = true

[node name="Shelf" type="Sprite" parent="."]
position = Vector2( 1100, 700 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 14 )

[node name="Bowl" type="Sprite" parent="."]
position = Vector2( 1021, 595 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 20 )

[node name="Shoppingcart" type="Sprite" parent="."]
position = Vector2( 1552, 788 )
scale = Vector2( 0.755, 0.75 )
texture = ExtResource( 15 )

[node name="Louise" type="AnimatedSprite" parent="."]
position = Vector2( 300, 740 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "Idle"
playing = true
script = ExtResource( 18 )
facingRight = true

[node name="Area2D" type="Area2D" parent="Louise"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Louise/Area2D"]
shape = SubResource( 3 )

[node name="Action Text" type="Node2D" parent="."]
position = Vector2( 960, 400 )
script = ExtResource( 17 )
nextScene = "res://Scenes/Game Scenes/Act2Scene5.tscn"

[node name="GameArea2D" type="Area2D" parent="Action Text"]
position = Vector2( 140, 270 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Action Text/GameArea2D"]
position = Vector2( 0, 71 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Action Text"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Action Text/Area2D"]
shape = SubResource( 4 )

[node name="Text" type="Label" parent="Action Text"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -679.5
margin_top = -102.5
margin_right = 679.5
margin_bottom = 102.5
theme = ExtResource( 16 )
text = "I could use a salad bowl like this."
align = 1
valign = 1

[node name="MusicManager" type="Node" parent="."]
script = ExtResource( 19 )
index = 2

[connection signal="area_entered" from="Action Text/GameArea2D" to="Action Text" method="_on_GameArea2D_area_entered"]
[connection signal="area_exited" from="Action Text/GameArea2D" to="Action Text" method="_on_GameArea2D_area_exited"]
[connection signal="mouse_entered" from="Action Text/Area2D" to="Action Text" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Action Text/Area2D" to="Action Text" method="_on_Area2D_mouse_exited"]
